soroban-sdk/tests/macros_fails/contractfile_with_sha256_verify_fail.stderr
error: sha256 does not match file
 --> tests/macros_fails/contractfile_with_sha256_verify_fail.rs:1:1
  |
1 | / #[soroban_sdk::contractfile(
2 | |     file = "../../../target/wasm32-unknown-unknown/release/example_add_i32.wasm",
3 | |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000"
4 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `soroban_sdk::contractfile` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/macros_fails/contractfile_with_sha256_verify_fail.rs:5:14
  |
5 | pub struct X;
  |              ^ consider adding a `main` function to `$DIR/tests/macros_fails/contractfile_with_sha256_verify_fail.rs`
